﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-10-03 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.9.0.2 released from MAINT_2_9_0

2006-10-03 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Sync token name, move it's definition to one place
      (bug #1569612).

2006-10-01 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.9.0.1 released from MAINT_2_9_0
    * libraries/database_interface.lib.php: bug #1568341, 
      case sensitivity in database names
    * tbl_relation.php: trap error 1452 when adding a foreign key
      and a constraint fails
    * libraries/export/sql.php: bug #1550690, wrong export of constraints,
      thanks to Robert Vock

2006-09-29 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/grab_globals.lib.php: fix attack via _FILES,
      thanks to Stefan Esser
    * libraries/database_interface.lib.php, bug #1566904, typo in require,
      thanks to Björn Wiberg - bwiberg.
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat

2006-09-27 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, /session.inc.php, /url_generating.lib.php:
      security fixes (announcement will come later),
      thanks to Sebastian Mendel and Stefan Esser
    * libraries/.htaccess: remove potential vulnerability (allow from none),
      thanks to Michael Heimpold
    ### 2.9.1-rc1 released from QA_2_9

2006-09-22 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/tbl_properties_links.inc.php: bug #1560152, 
      after renaming a table the navigation does not work

2006-09-20 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.9.0 released from QA_2_9

2006-09-19 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html, libraries/footer.inc.php, 
      libraries/dbg/profiling.php: remove profiling feature
      due to licensing issues (non GPL code)

2006-09-15 Marc Delisle  <lem9@users.sourceforge.net>