@@ -4061,10 +4061,10 @@ Original Credits of Version 2.1.0
     <li><a href="http://www.wikipedia.org/wiki/Client_%28computing%29">Client</a>
          - a computer system that accesses a (remote) service on another computer
          by some kind of network.</li>
-    <li><a href="http://www.wikipedia.org/wiki/Column (database)">column</a>
+    <li><a href="http://www.wikipedia.org/wiki/Column_%28database%29">column</a>
          - a set of data values of a particular simple type, one for each row of
          the table.</li>
-    <li><a href="http://www.wikipedia.org/wiki/HTTP cookie">Cookie</a>
+    <li><a href="http://www.wikipedia.org/wiki/HTTP_cookie">Cookie</a>
          - a packet of information sent by a server to a World Wide Web browser
          and then sent back by the browser each time it accesses that server.</li>
     <li><a href="http://www.wikipedia.org/wiki/Comma-separated_values">CSV</a>
@@ -4077,9 +4077,9 @@ Original Credits of Version 2.1.0
          - a PHP module that extends PHP with additional functionality.</li>
     <li><a href="http://www.wikipedia.org/wiki/FAQ">FAQ (Frequently Asked Questions)</a>
          - a list of commonly asked question and there answers.</li>
-    <li><a href="http://www.wikipedia.org/wiki/Field (computer science)">Field</a>
+    <li><a href="http://www.wikipedia.org/wiki/Field_%28computer_science%29">Field</a>
          - one part of divided data/columns.</li>
-    <li><a href="http://www.wikipedia.org/wiki/Foreign key">foreign key</a>
+    <li><a href="http://www.wikipedia.org/wiki/Foreign_key">foreign key</a>
          - a field or group of fields in a database record that point to a key
          field or group of fields forming a key of another database record in some
          (usually different) table.</li>
@@ -4096,21 +4096,21 @@ Original Credits of Version 2.1.0
          - any machine connected to a computer network, a node that has a hostname.</li>
     <li><a href="http://www.wikipedia.org/wiki/Hostname">hostname</a>
          - the unique name by which a network attached device is known on a network.</li>
-    <li><a href="http://www.wikipedia.org/wiki/HyperText Transfer Protocol">HTTP
+    <li><a href="http://www.wikipedia.org/wiki/HyperText_Transfer_Protocol">HTTP
             (HyperText Transfer Protocol)</a>
          - the primary method used to transfer or convey information on the World
          Wide Web.</li>
-    <li><a href="http://www.wikipedia.org/wiki/Https: URI scheme">https</a>
+    <li><a href="http://www.wikipedia.org/wiki/Https:_URI_scheme">https</a>
          - a <abbr title="HyperText Transfer Protocol">HTTP</abbr>-connection with
          additional security measures.</li>
-    <li><a href="http://www.wikipedia.org/wiki/Internet Information Services">IIS (Internet Information Services)</a>
+    <li><a href="http://www.wikipedia.org/wiki/Internet_Information_Services">IIS (Internet Information Services)</a>
          - a set of Internet-based services for servers using Microsoft Windows.</li>
-    <li><a id="glossar_index" href="http://www.wikipedia.org/wiki/Index (database)">Index</a>
+    <li><a id="glossar_index" href="http://www.wikipedia.org/wiki/Index_%28database%29">Index</a>
          - a feature that allows quick access to the rows in a table.</li>
-    <li><a href="http://www.wikipedia.org/wiki/Internet Protocol">IP (Internet Protocol)</a>
+    <li><a href="http://www.wikipedia.org/wiki/Internet_Protocol">IP (Internet Protocol)</a>
          - a data-oriented protocol used by source and destination hosts for
          communicating data across a packet-switched internetwork.</li>
-    <li><a href="http://www.wikipedia.org/wiki/IP Address">IP Address</a>
+    <li><a href="http://www.wikipedia.org/wiki/IP_Address">IP Address</a>
          - a unique number that devices use in order to identify and communicate
          with each other on a network utilizing the Internet Protocol standard.</li>
     <li><a href="http://www.wikipedia.org/wiki/ISAPI">ISAPI
@@ -4128,7 +4128,7 @@ Original Credits of Version 2.1.0
     <li><a href="http://www.wikipedia.org/wiki/Mac">Mac (Apple Macintosh)</a>
          - line of personal computers is designed, developed, manufactured, and
          marketed by Apple Computer.</li>
-    <li><a id="glossar_mac_os_x" href="http://www.wikipedia.org/wiki/Mac OS X"><acronym title="Apple Macintosh">Mac</acronym> <abbr title="operating system">OS</abbr> X</a>
+    <li><a id="glossar_mac_os_x" href="http://www.wikipedia.org/wiki/Mac_OS_X"><acronym title="Apple Macintosh">Mac</acronym> <abbr title="operating system">OS</abbr> X</a>
         - the operating system which is included with all currently shipping Apple
         Macintosh computers in the consumer and professional markets.</li>
     <li><a href="http://www.wikipedia.org/wiki/MCrypt">MCrypt</a>
@@ -4146,11 +4146,11 @@ Original Credits of Version 2.1.0
          - the improved MySQL client PHP extension.</li>
     <li><a href="http://php.net/mysql">mysql</a>
          - the MySQL client PHP extension.</li>
-    <li><a href="http://en.wikipedia.org/wiki/OpenDocument">OpenDocument</a>
+    <li><a href="http://www.wikipedia.org/wiki/OpenDocument">OpenDocument</a>
          - open standard for office documents.</li>
-    <li><a href="http://www.wikipedia.org/wiki/OS X"><abbr title="operating system">OS</abbr> X</a>
+    <li><a href="http://www.wikipedia.org/wiki/OS_X"><abbr title="operating system">OS</abbr> X</a>
          - look at <a href="#glossar_mac_os_x"><acronym title="Apple Macintosh">Mac</acronym> <abbr title="operating system">OS</abbr> X</a>.</li>
-    <li><a href="http://www.wikipedia.org/wiki/Portable Document Format">PDF
+    <li><a href="http://www.wikipedia.org/wiki/Portable_Document_Format">PDF
             (Portable Document Format)</a>
          - a file format developed by Adobe Systems for representing two
          dimensional documents in a device independent and resolution independent
@@ -4164,7 +4164,7 @@ Original Credits of Version 2.1.0
          programming language used mainly for developing server-side applications
          and dynamic web content, and more recently, a broader range of software
          applications.</li>
-    <li><a href="http://www.wikipedia.org/wiki/Port (computing)">port</a>
+    <li><a href="http://www.wikipedia.org/wiki/Port_%28computing%29">port</a>
          - a connection through which data is sent and received.</li>
     <li><a href="http://www.wikipedia.org/wiki/Gzip">RFC</a>
          - Request for Comments (RFC) documents are a series of memoranda
@@ -4172,7 +4172,7 @@ Original Credits of Version 2.1.0
          Internet technologies.</li>
     <li><a href="http://www.ietf.org/rfc/rfc1952.txt">RFC 1952</a>
          - GZIP file format specification version 4.3</li>
-    <li><a href="http://www.wikipedia.org/wiki/Row (database)">Row (record, tulpel)</a>
+    <li><a href="http://www.wikipedia.org/wiki/Row_%28database%29">Row (record, tulpel)</a>
         - represents a single, implicitly structured data item in a table.</li>
     <li><a href="http://www.wikipedia.org/wiki/Server_%28computing%29">Server</a>
          - a computer system that provides services to other computing
@@ -4186,7 +4186,7 @@ Original Credits of Version 2.1.0
          - a cryptographic protocol which provides secure communication on the Internet.</li>
     <li><a href="http://www.wikipedia.org/wiki/SQL">SQL</a>
          - Structured Query Language</li>
-    <li><a href="http://www.wikipedia.org/wiki/Table (database)">table</a>
+    <li><a href="http://www.wikipedia.org/wiki/Table_%28database%29">table</a>
          - a set of data elements (cells) that is organized, defined and stored as
          horizontal rows and vertical columns where each item can be uniquely
          identified by a label or key or by it?s position in relation to other items.</li>
