@@ -5,6 +5,10 @@ phpMyAdmin - ChangeLog
 $Id$
 $Source$
 
+2006-10-04 Michal Čihař  <michal@cihar.com>
+    * Documentation.html: Fixes thanks to Matt LaPlante - cyberdog3k.
+        - Fix Wikipedia URLs (patch #1568498).
+
 2006-10-03 Marc Delisle  <lem9@users.sourceforge.net>
     ### 2.9.0.2 released from MAINT_2_9_0
 
